root/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toska-dev-svc
spec:
  selector:
    app: toska-dev
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
