root/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: toska-dev-ing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
  - host: toska.dev
    http:
      paths:
      - path: "/"
        backend:
          serviceName: toska-dev-svc
          servicePort: 80
  tls:
  - secretName: toska-dev-tls
    hosts:
    - toska.dev
